# datasette-showboat

./: README.md  pyproject.toml
datasette_showboat/: __init__.py
datasette_showboat/templates/: showboat_document.html  showboat_index.html
tests/: test_showboat.py
