[project]
name = "datasette-showboat"
version = "0.1"
description = "Datasette plugin for SHOWBOAT_REMOTE_URL"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a24"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/simonw/datasette-showboat"
Changelog = "https://github.com/simonw/datasette-showboat/releases"
Issues = "https://github.com/simonw/datasette-showboat/issues"
CI = "https://github.com/simonw/datasette-showboat/actions"

[project.entry-points.datasette]
showboat = "datasette_showboat"

[tool.setuptools.package-data]
datasette_showboat = ["templates/*.html", "static/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

